samples/_failures_safe/1761691693_476a87_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df2b88c6.c: In function ‘main’:
./samples/SAFE/__tmp_df2b88c6.c:185:28: error: ‘new’ undeclared (first use in this function)
  185 |         sm.current_state = new
      |                            ^~~
./samples/SAFE/__tmp_df2b88c6.c:185:28: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_df2b88c6.c:185:31: error: expected ‘;’ at end of input
  185 |         sm.current_state = new
      |                               ^
      |                               ;
./samples/SAFE/__tmp_df2b88c6.c:185:9: error: expected declaration or statement at end of input
  185 |         sm.current_state = new
      |         ^~
./samples/SAFE/__tmp_df2b88c6.c:185:9: error: expected declaration or statement at end of input
